--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,7 +10,7 @@
         <activity
             android:name="rs.aleph.android.example21.activities.MainActivity"
             android:icon="@mipmap/ic_launcher"
-            android:label="@string/activity_main_name"
+            android:label="Notes"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -26,7 +26,7 @@
         <activity
             android:name="rs.aleph.android.example21.activities.DetailActivity"
             android:icon="@mipmap/ic_launcher"
-            android:label="@string/detail_activity"
+            android:label="Notes"
             android:parentActivityName="rs.aleph.android.example21.activities.MainActivity"
             android:theme="@style/AppTheme.NoActionBar" />
     </application>
